More agent builder stuff, add asking KD via RAG agent, some cleanup